<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#336699"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Mainsearch" >

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/ClassFinder"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#EEEEEE"
         android:textSize="40sp"
         android:textStyle="bold|italic" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:textColor="#EEEEEE"
         android:text="@string/Version1.0" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"
         android:gravity="center"
         android:textColor="#EEEEEE"
         android:text="@string/penjelasan"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="17dp"
         android:gravity="center"
         android:textColor="#EEEEEE"
         android:text="@string/penjelasan2"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <Button
         android:id="@+id/HomePage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignRight="@+id/textView2"
         android:layout_below="@+id/textView4"
         android:layout_marginTop="46dp"
         android:text="@string/home" />

</RelativeLayout>